--- a/new/.htaccess
+++ b/new/.htaccess
@@ -1,4 +1,2 @@
-RewriteEngine on
-RewriteCond %{REQUEST_URI} !^/index.html$
-RewriteCond %{REQUEST_URI} !\.(gif|jpe?g|png|css|js)$
-RewriteRule .* /index.html [L,R=302]
+RewriteEngine On
+RewriteRule !^(|index\..+|dir/.*)$ dir%{REQUEST_URI} [R=301,L]
